tests/rosetta/out/Smalltalk/anagrams.out
/workspace/mochi/tests/rosetta/out/Smalltalk/anagrams.st:63: parse error, expected '|' or identifier
